--- a/Bio.css
+++ b/Bio.css
@@ -13,11 +13,11 @@ h1 {
 p {
 	text-align:center;
 	font-size:24pt;
-	color:#CCFF99;
+	color:#CCCC66;
 }
 
 
-.bold {
+span p {
 	font-weight:bold;
 }
 
