--- a/Bio.css
+++ b/Bio.css
@@ -13,11 +13,11 @@ h1 {
 p {
 	text-align:center;
 	font-size:24pt;
-	color:#FF6600;
+	color:#FEE0C6;
 }
 
-
-span p {
-	font-weight: bold;
+p span {
+	font-weight:bold;
 }
+
 
