--- a/bio.css
+++ b/bio.css
@@ -1,6 +1,6 @@
 body {
-	background-image: url("green_cup.png");
-
+	background-color: #ba8212;
+	background-image: url(./brushed-alum.png);
 }
 
 h1 {
